# aether

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml
config/: direwolf.conf.example
deploy/mosquitto/: mosquitto.conf  mosquitto.local.conf
docs/: glm-benchmark.md  local-aprs-igate.md  orbital-celestrak.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: alertsClient.test.ts  alertsClient.ts  replayClient.test.ts  replayClient.ts  watchlistClient.test.ts  watchlistClient.ts  wsClient.test.ts  wsClient.ts
frontend/src/app/: App.tsx
frontend/src/map/: presentationRegistry.test.ts  presentationRegistry.ts
frontend/src/state/: liveState.test.ts  liveState.ts  replay.test.ts  replay.ts  selectors.test.ts  selectors.ts  store.test.ts  store.ts
frontend/src/types/: alertRules.ts  records.ts
scripts/: bench_celestrak.py  bench_glm.py  check.ps1  check.sh
scripts/hooks/: pre-push
src/aether/: __init__.py  config.py
src/aether/adapters/: __init__.py  adsb_provider.py  ais.py  ais_fake_feeder.py  aoi.py  aprs.py  aprs_fake_feeder.py  aprs_is.py  aprs_is_fake_feeder.py  aprs_kiss.py  celestrak.py  celestrak_fake_feeder.py  faa_notam.py  faa_notam_fake_feeder.py  faa_tfr.py  faa_tfr_fake_feeder.py  firms.py  firms_fake_feeder.py  lightning_glm.py  lightning_glm_fake_feeder.py  local_adsb.py  local_aprs.py  mil_classify.py  network_adsb.py  network_adsb_fake_feeder.py  readsb.py  readsb_fake_feeder.py  sondehub.py  sondehub_fake_feeder.py  usgs.py  usgs_fake_feeder.py
src/aether/alerts/: __init__.py  conditions.py  contextual.py  engine.py  geo.py  identity.py  notify.py  templates.py
src/aether/backend/: __init__.py  alert_rules_api.py  alerts_api.py  demo.py  geofence_api.py  hub.py  main.py  notifications_api.py  protocol.py  replay_api.py  security.py  subscription.py  watchlist_api.py
src/aether/bus/: __init__.py  client.py  demo_publisher.py  topics.py
src/aether/fusion/: __init__.py  engine.py  freshness.py  precedence.py
src/aether/orbital/: __init__.py  pass_prediction.py  sgp4_propagate.py  transforms.py
src/aether/persist/: __init__.py  alert_rules.py  database.py  geofences.py  migrations.py  (+5 more)
tests/integration/: conftest.py  test_ais_ws.py  test_alert_engine_ws.py  test_alert_rules_api_ws.py  test_aprs_is_ws.py  test_celestrak_ws.py  test_demo_ws.py  test_faa_notam_ws.py  test_faa_tfr_ws.py  test_firms_ws.py  test_geofence_api_ws.py  test_glm_ws.py  test_history_api_ws.py  test_local_adsb_ws.py  test_local_aprs_ws.py  test_network_adsb_ws.py  test_notify_ws.py  test_persistence_path.py  test_replay_path.py  test_sondehub_ws.py  test_tfr_became_active_ws.py  test_usgs_ws.py
tests/unit/: test_adsb_provider.py  test_ais_adapter.py  test_alert_conditions.py  test_alert_contextual.py  test_alert_engine.py  test_alert_geo.py  test_alert_rule_model.py  test_alert_rules_api.py  test_alert_templates.py  test_alerts_api.py  test_aoi_tiling.py  test_aprs_adapter.py  test_aprs_is_adapter.py  test_aprs_kiss.py  test_bus_topics.py  test_celestrak_adapter.py  test_config_api.py  test_faa_notam_adapter.py  test_faa_tfr_adapter.py  test_firms_adapter.py  test_frontend_serve.py  test_fusion_engine.py  test_fusion_freshness.py  test_fusion_precedence.py  test_geofence_api.py  test_geofence_model.py  test_history_api.py  test_lightning_glm_adapter.py  test_live_state.py  test_local_adsb_adapter.py  test_local_aprs_adapter.py  test_mil_classify.py  test_network_adsb_adapter.py  test_notifications_api.py  test_notify.py  test_notify_drivers.py  test_orbital_transforms.py  test_pass_prediction.py  test_persist_alert_rules.py  test_persist_geofences.py  (+20 more)
(+43 files in other folders)
