[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aether"
version = "0.1.0"
description = "aether — a private, local-first common operating picture (COP) for a Raspberry Pi home station"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "kninetimmy" }]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "aiomqtt>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aether"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src"]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
