[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aether"
version = "0.1.0"
description = "aether — a private, local-first common operating picture (COP) for a Raspberry Pi home station"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "kninetimmy" }]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "aiomqtt>=2.0",
    # AISStream is a secure-WebSocket feed (PRD §18.5); the AIS adapter speaks it
    # with this client (also serves the no-hardware fake feeder). Present already
    # via uvicorn[standard], but declared explicitly since aether imports it. Floor
    # is 14: that release made the asyncio impl (single-arg handler, top-level
    # connect/serve, Server.serve_forever) the default that ais_fake_feeder uses.
    "websockets>=14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "httpx>=0.27",
]
# NOAA GOES GLM lightning adapter parser (M5.6, PRD §11.10). Optional/capability-gated:
# the adapter degrades to an `offline` status if absent (`pip install "aether[lightning]"`).
# Benchmark-gated and verified viable on the Pi 5 (docs/glm-benchmark.md); aarch64 wheels
# come prebuilt from piwheels (no compilation).
lightning = [
    "netCDF4>=1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aether"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src"]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true

# Optional GLM-lightning parser deps (the `[lightning]` extra). netCDF4 ships no type
# stubs, and neither it nor numpy is present in the standard `[dev]` env — treat both as
# untyped so the strict gate is green whether or not `[lightning]` is installed. They are
# imported only inside the live GLM provider, behind a capability gate.
[[tool.mypy.overrides]]
module = ["netCDF4", "numpy", "numpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Put the repo root on sys.path so tests can import the shared fixture packages
# (e.g. `from tests.fixtures.aprs import kiss_frames`). Without this it only works
# under `python -m pytest` (which adds CWD); bare `pytest` in CI would not — this
# keeps the two invocations equivalent.
pythonpath = ["."]
